[gd_scene load_steps=27 format=3 uid="uid://c21np1kf5tqa"]

[ext_resource type="Script" uid="uid://b4ic6t8wh6wv3" path="res://scripts/player/main_character.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://cb3b3xdgowd4c" path="res://scripts/player/player_state_machine.gd" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://cbef72lwf0clx" path="res://scripts/player/hurt_box.gd" id="3_ur7pv"]
[ext_resource type="Script" uid="uid://dn6b3i7grc5i2" path="res://scripts/player/state_idle.gd" id="4_qlg0r"]
[ext_resource type="Script" uid="uid://dgwhi1djunvbp" path="res://scripts/player/state_walk.gd" id="5_qlg0r"]
[ext_resource type="Script" uid="uid://7kb5k05a1i4a" path="res://scripts/player/state_attack.gd" id="6_tuyoq"]
[ext_resource type="AudioStream" uid="uid://bmjprhnv31uow" path="res://sounds/sword_slash.wav" id="7_smehm"]
[ext_resource type="AudioStream" uid="uid://ch1jrodwfwexi" path="res://sounds/grunt_1.wav" id="8_ur7pv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_63peu"]
radius = 16.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qek5x"]
radius = 8.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tuyoq"]
radius = 2.5
height = 10.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5gtgg"]
radius = 2.5
height = 10.0

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jej6c"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-8, 0), Vector2(-8, 2.5), Vector2(-6.5, 5), Vector2(-2, 8), Vector2(2.5, 8), Vector2(6, 5.5), Vector2(6, 5.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1.5708, 1.5708, -0.785398, 1.5708, 0.0, -0.785398, -0.785398]
}

[sub_resource type="Animation" id="Animation_3v2ag"]
resource_name = "attack_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -8), Vector2(-2.5, -7.5), Vector2(-5.5, -6), Vector2(-8, -2.5), Vector2(-8, -9.53674e-07), Vector2(-6.5, 5), Vector2(-6.5, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.0, 0.785398, 0.0, 1.5708, 0.785398, 0.785398]
}

[sub_resource type="Animation" id="Animation_f1ej7"]
resource_name = "attack_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(2.38419e-07, 8), Vector2(3.5, 7), Vector2(5.5, 5.5), Vector2(7.5, 2.5), Vector2(8, -9.53674e-07), Vector2(5.5, -5.5), Vector2(5.5, -5.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.0, 0.785398, 0.0, 1.5708, 0.785398, 0.785398]
}

[sub_resource type="Animation" id="Animation_d2wvv"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(8, -9.53674e-07), Vector2(7.5, -2.5), Vector2(6, -5.5), Vector2(3, -7.5), Vector2(2.38419e-07, -8), Vector2(-6, -5.5), Vector2(-6, -5.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1.5708, 1.5708, -0.785398, 1.5708, 0.0, -0.785398, -0.785398]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "idle_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 0.0, -0.785398]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 0)]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5708, 2.35619, 1.5708, 0.785398]
}

[sub_resource type="Animation" id="Animation_y4r1p"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -0.785398, -1.5708, -2.35619]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/sword/AttackCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/sword/AttackCollision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [3.14159, 3.92699, 3.14159, 2.35619]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2wvv"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"attack_down": SubResource("Animation_jej6c"),
&"attack_left": SubResource("Animation_3v2ag"),
&"attack_right": SubResource("Animation_f1ej7"),
&"attack_up": SubResource("Animation_d2wvv"),
&"idle_down": SubResource("Animation_g2els"),
&"idle_left": SubResource("Animation_tuyoq"),
&"idle_right": SubResource("Animation_qlg0r"),
&"idle_up": SubResource("Animation_dqkch"),
&"walk_down": SubResource("Animation_fjrip"),
&"walk_left": SubResource("Animation_ur7pv"),
&"walk_right": SubResource("Animation_y4r1p"),
&"walk_up": SubResource("Animation_smehm")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
top_level = true
shape = SubResource("CircleShape2D_63peu")
debug_color = Color(0.172674, 0.469405, 3.85046e-07, 0.419608)

[node name="Sprite2D" type="MeshInstance2D" parent="."]
position = Vector2(-4.76837e-07, 2.11596e-06)
scale = Vector2(2, 2)
mesh = SubResource("CapsuleMesh_qek5x")

[node name="sword" type="Area2D" parent="Sprite2D"]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("3_ur7pv")

[node name="AttackCollision" type="CollisionShape2D" parent="Sprite2D/sword"]
position = Vector2(8, 0)
shape = SubResource("CapsuleShape2D_tuyoq")
debug_color = Color(0.996319, 0, 0.189017, 0.42)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Sprite2D/sword/AttackCollision"]
position = Vector2(-4.9647e-09, 9.99535e-09)
mesh = SubResource("CapsuleMesh_5gtgg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d2wvv")
}

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("3_qhqgy")
metadata/_custom_type_script = "uid://cb3b3xdgowd4c"

[node name="StateIdle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_qlg0r")
metadata/_custom_type_script = "uid://dn6b3i7grc5i2"

[node name="StateWalk" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_qlg0r")
metadata/_custom_type_script = "uid://dgwhi1djunvbp"

[node name="StateAttack" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_tuyoq")
attack_sound = ExtResource("7_smehm")
grunt_sound = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://7kb5k05a1i4a"

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
max_polyphony = 4
